Fix vertical spacing in heading icon

--- a/scss/_patterns_heading-icon.scss
+++ b/scss/_patterns_heading-icon.scss
@@ -13,8 +13,8 @@
       display: flex;
       margin-bottom: $sp-medium;
 
-      @media (min-width: $breakpoint-large) {
-        margin-bottom: $sp-large;
+      + p {
+        margin-top: 0;
       }
     }
 
